<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/addImageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/outline"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/addImageTitle"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/addImageFromGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addImageFromGallery" />

    <Button
        android:id="@+id/addImageFromCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addImageFromCamera" />


</LinearLayout>